# dbx-rs

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
connectors/mssql/: Cargo.toml
connectors/mssql/src/: connector.rs  lib.rs
connectors/mssql/src/connector/: sql.rs  typed.rs
connectors/mssql/tests/: mssql_live.rs
connectors/mysql/: Cargo.toml
connectors/mysql/src/: connector.rs  lib.rs
connectors/mysql/src/connector/: sql.rs  typed.rs
connectors/mysql/tests/: mysql_family_live.rs
connectors/oracle/: Cargo.toml
connectors/oracle/src/: connector.rs  lib.rs
connectors/oracle/src/connector/: driver.rs  sql.rs  typed.rs
connectors/oracle/tests/: oracle_live.rs
connectors/postgres/: Cargo.toml
connectors/postgres/src/: connector.rs  lib.rs  main.rs
connectors/postgres/src/connector/: typed.rs
crates/dbx-rs-app-builder/: Cargo.toml
crates/dbx-rs-app-builder/src/: app.rs  authority.rs  cli.rs  main.rs
crates/dbx-rs-checkpoint/: Cargo.toml  README.md
crates/dbx-rs-checkpoint/src/: lib.rs
crates/dbx-rs-cli/: Cargo.toml
crates/dbx-rs-cli/src/: cli.rs  main.rs
crates/dbx-rs-cli/tests/: cli.rs
crates/dbx-rs-config/: Cargo.toml
crates/dbx-rs-config/src/: lib.rs
crates/dbx-rs-connector-sdk/: Cargo.toml
crates/dbx-rs-connector-sdk/src/: contract.rs  cursor.rs  error.rs  lib.rs  model.rs  secret.rs
crates/dbx-rs-control/: Cargo.toml
crates/dbx-rs-control/src/: dto.rs  error.rs  lib.rs  service.rs
crates/dbx-rs-control/tests/: control_service.rs
crates/dbx-rs-daemon/: Cargo.toml
crates/dbx-rs-daemon/src/: error.rs  hec.rs  identity.rs  lifecycle.rs  main.rs  operational.rs  prepared.rs  rising.rs  rising_metadata.rs  runtime.rs  secrets.rs  secure_fs.rs  splunk.rs  worker.rs
crates/dbx-rs-native-connectors/: Cargo.toml
crates/dbx-rs-native-connectors/src/: lib.rs
crates/dbx-rs-native-connectors/tests/: postgres_cursor_live.rs
crates/dbx-rs-secure-store/: Cargo.toml  build.rs
crates/dbx-rs-secure-store/src/: deployment.rs  error.rs  fs.rs  lib.rs  store.rs
crates/dbx-rs-spool/: Cargo.toml  README.md
crates/dbx-rs-spool/src/: error.rs  format.rs  identity.rs  key.rs  lib.rs  model.rs  spool.rs
crates/dbx-rs-spool/src/spool/: tests.rs
crates/dbx-rs-state/: Cargo.toml  README.md
crates/dbx-rs-state/src/: lib.rs  model.rs  store.rs
crates/dbx-rs-telemetry/: Cargo.toml
crates/dbx-rs-telemetry/src/: lib.rs
packaging/splunk/: BUILDER.md  build-apps.ps1  build-apps.sh
packaging/splunk/TA-dbx-rs/: README.md
packaging/splunk/TA-dbx-rs/README/: dbxrs_generic.conf.spec  dbxrs_inputs.conf.example  dbxrs_inputs.conf.spec
packaging/splunk/TA-dbx-rs/certs/: .gitignore  README.txt
packaging/splunk/TA-dbx-rs/default/: app.conf  dbxrs_generic.conf  dbxrs_inputs.conf  indexes.conf  inputs.conf  props.conf
packaging/splunk/TA-dbx-rs/deployment-secrets/: .gitignore  README.txt
packaging/splunk/TA-dbx-rs/queries/: README.txt
packaging/splunk/TA-dbx-rs/queries/mariadb/: example.sql
packaging/splunk/TA-dbx-rs/queries/mssql/: example.sql
packaging/splunk/TA-dbx-rs/queries/oracle/: example.sql
packaging/splunk/TA-dbx-rs/queries/psql/: .gitignore  example.sql
