[package]
name = "dbx-rs-connector-oracle"
description = "Experimental native Oracle connector for dbx-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
arrow-array.workspace = true
arrow-ipc.workspace = true
arrow-schema.workspace = true
chrono.workspace = true
dbx-rs-connector-sdk.workspace = true
oracle-rs.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util.workspace = true

[lints]
workspace = true
