[package]
name = "dbx-rs-connector-postgres"
description = "Native PostgreSQL connector for dbx-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
arrow-array.workspace = true
arrow-ipc.workspace = true
arrow-schema.workspace = true
chrono.workspace = true
dbx-rs-connector-sdk.workspace = true
dbx-rs-telemetry.workspace = true
futures-util.workspace = true
rustls.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = [
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-postgres = { workspace = true, features = ["with-chrono-0_4", "with-uuid-1"] }
tokio-postgres-rustls.workspace = true
tokio-util.workspace = true
uuid.workspace = true
webpki-roots.workspace = true

[[bin]]
name = "dbx-rs-connector-postgres"
path = "src/main.rs"

[lints]
workspace = true
