[package]
name = "dbx-rs-checkpoint"
description = "In-memory delivery-gated checkpoint state for dbx-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
dbx-rs-connector-sdk.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
