[package]
name = "dbx-rs-cli"
description = "Administrative command-line interface for dbx-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
dbx-rs-config.workspace = true
dbx-rs-control.workspace = true
dbx-rs-secure-store.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "signal"] }
tokio-util.workspace = true

[[bin]]
name = "dbx-rs"
path = "src/main.rs"

[lints]
workspace = true
