[package]
name = "dbx-rs-connector-sdk"
description = "Stable connector contracts for dbx-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-util.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
