[package]
name = "dbx-rs-daemon"
description = "Splunk-supervised dbx-rs collection daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
configparser.workspace = true
dbx-rs-config.workspace = true
dbx-rs-connector-postgres = { version = "0.1.0", path = "../../connectors/postgres" }
dbx-rs-connector-sdk.workspace = true
dbx-rs-telemetry.workspace = true
http.workspace = true
rcgen.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-util.workspace = true
ureq.workspace = true

[[bin]]
name = "dbx-rs-daemon"
path = "src/main.rs"

[lints]
workspace = true
