[package]
name = "dbx-rs-native-connectors"
description = "Connector-neutral native connector registry and Arrow IPC adapters for dbx-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
arrow-array.workspace = true
arrow-ipc.workspace = true
arrow-schema.workspace = true
dbx-rs-connector-postgres = { version = "0.1.0", path = "../../connectors/postgres" }
dbx-rs-connector-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tokio-util.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
