[package]
name = "dbx-rs-spool"
description = "Encrypted durable event spool for dbx-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
dbx-rs-secure-store.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
