[package]
name = "dbx-rs-telemetry"
description = "Safe operational NDJSON telemetry for dbx-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
